# iclue

./: README.md  db.sqlite3  manage.py  pyproject.toml
articles/: admin.py  forms.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_questions_item.py  0003_rename_subsection_subsections_and_more.py
articles/templates/articles/: base.html  home.html  item_del.html  item_id.html  items.html  question_del.html  question_id.html  questions.html  subsection_del.html  subsection_id.html  subsections.html
promps/: asgi.py  settings.py  urls.py  wsgi.py
