[tool.poetry]
name = "iclue"
version = "0.1.0"
description = ""
authors = ["Natalia Lifshits <alata9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-crispy-forms = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
